# dde-desktop-videowallpaper-plugin

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  rules
src/: CMakeLists.txt  ddplugin-videowallpaper-qt5.cmake  ddplugin-videowallpaper-qt6.cmake  ddplugin-videowallpaper.cmake  rootwidgeteventfilter.hpp  videoproxy.cpp  videoproxy.h  videosurface.hpp  videowallpapermenuscene.cpp  videowallpapermenuscene.h  videowallpaperplugin.cpp  videowallpaperplugin.h  wallpaperconfig.cpp  wallpaperconfig.h  wallpaperconfig_p.h  wallpaperengine.cpp  wallpaperengine.h  wallpaperengine_p.h
src/desktoputils/: widgetutil.h
src/dfm-base/utils/: universalutils.h
